--- a/app/assets/stylesheets/static_pages.scss
+++ b/app/assets/stylesheets/static_pages.scss
@@ -7,7 +7,6 @@ nav {
 	padding: 10px;
 }
 
-
 footer {
 	text-align: center;
 	background-color: #191919;
@@ -21,7 +20,6 @@ body {
 	background-color: #ffffe6;
 }
 
-
 .jumbotron p {
 	font-family: "Times New Roman", Times, serif;
 	text-align: center;
@@ -30,7 +28,55 @@ body {
 
 
 
- /*NAV BAR CUSTOM STYLE*/
+/*NAVBAR CUSTOM BREAKPOINT*/
+@media (max-width: 1100px) {
+  .navbar-header {
+      float: none;
+  }
+  .navbar-left,.navbar-right {
+      float: none !important;
+  }
+  .navbar-toggle {
+      display: block;
+  }
+  .navbar-collapse {
+      border-top: 1px solid transparent;
+      box-shadow: inset 0 1px 0 rgba(255,255,255,0.1);
+  }
+  .navbar-fixed-top {
+      top: 0;
+      border-width: 0 0 1px;
+  }
+  .navbar-collapse.collapse {
+      display: none!important;
+  }
+  .navbar-nav {
+      float: none!important;
+      margin-top: 7.5px;
+  }
+  .navbar-nav>li {
+      float: none;
+  }
+  .navbar-nav>li>a {
+      padding-top: 10px;
+      padding-bottom: 10px;
+  }
+  .collapse.in{
+      display:block !important;
+  }
+  .navbar-nav .open .dropdown-menu {
+     position: static;
+     float: none;
+     width: auto;
+     margin-top: 0;
+     background-color: transparent;
+     border: 0;
+     -webkit-box-shadow: none;
+     box-shadow: none;
+  }
+}
+
+ /*NAVBAR CUSTOM COLOR*/
 .navbar-custom {
 	background-color: #191919;
   position: absolute;
@@ -44,25 +90,31 @@ body {
   	width: 100%;
     height: 100%;
     max-height: 100%;
-    background-size:100% 100%;
+    background-size: 100%;
     background-repeat: no-repeat;
     position: relative;
 }
 
 #home-header h1 {
-  	font: 400 60px/1.3 'Bevan', Georgia, serif;
-  	text-align: center;
-    z-index: 2;
+  	font-family: 'Bevan', Georgia, serif;
     position: absolute;
     top: 10%;
     font-size: 9em;
     width: 100%;
-    height: 26px;
-    text-align: center;
+}
+
+@media (max-device-width: 667px) {
+  #home-header h1 {
+    font-family: 'Bevan', Georgia, serif;
+    position: absolute;
+    top: 10%;
+    font-size: 4.5em;
+    width: 100%;
+  }
 }
 
 #home-header h2, p {
-  	font: 'Pontano Sans', Verdana, Helvetica, sans-serif;
+  	font-family: 'Pontano Sans', Verdana, Helvetica, sans-serif;
   	font-size: 30px;
   	text-align: center;
 }
@@ -71,18 +123,25 @@ body {
 
 /*ABOUT PAGE STYLES*/
 #about-header h1 {
-  	font: 400 60px/1.3 'Bevan', Georgia, serif;
-  	text-align: center;
-    z-index: 2;
+  	font-family: 'Bevan', Georgia, serif;
     position: absolute;
     top: 10%;
     font-size: 8em;
     width: 100%;
-    height: 26px;
+}
+
+@media (max-device-width: 667px) {
+  #about-header h1 {
+    font-family: 'Bevan', Georgia, serif;
+    position: absolute;
+    top: 10%;
+    font-size: 4em;
+    width: 100%;
+  }
 }
 
 #about-header h2, p {
-  	font: 400 60px/1.6 'Pontano Sans', Verdana, Helvetica, sans-serif;
+  	font-family: 'Pontano Sans', Verdana, Helvetica, sans-serif;
   	font-size: 1.5em;
   	text-align: center;
 }
@@ -91,7 +150,7 @@ body {
 
 /*CONTACT PAGE STYLES*/
 #contact-header h1 {
-  	font: 400 60px/1.3 'Bevan', Georgia, serif;
+  	font-family: 'Bevan', Georgia, serif;
   	text-align: center;
     z-index: 2;
     position: absolute;
@@ -101,8 +160,18 @@ body {
     height: 26px;
 }
 
+@media (max-device-width: 667px) {
+  #contact-header h1 {
+    font-family: 'Bevan', Georgia, serif;
+    position: absolute;
+    top: 10%;
+    font-size: 4.5em;
+    width: 100%;
+  }
+}
+
 #contact-header h2, p {
-  	font: 400 60px/1.6 'Pontano Sans', Verdana, Helvetica, sans-serif;
+  	font-family: 'Pontano Sans', Verdana, Helvetica, sans-serif;
   	font-size: 1.5em;
   	text-align: center;
 }
@@ -112,8 +181,7 @@ body {
 }
 
 .contact-us h1 {
-	font: 400 60px/1.3 'Bevan', Georgia, serif;
-  	text-align: center;
+	font-family: 'Bevan', Georgia, serif;
 }
 
 
@@ -166,13 +234,13 @@ body {
 
 .orders-header h1 {
   padding-top: 50px;
-  font: 400 60px/1.3 'Bevan', Georgia, serif;
+  font-family: 'Bevan', Georgia, serif;
   text-align: center;
 }
 
 .orders-header h2 {
   padding-bottom: 50px;
-  font: 300 50px/1.6 'Pontano Sans', Verdana, Helvetica, sans-serif;
+  font-family: 'Pontano Sans', Verdana, Helvetica, sans-serif;
   text-align: center;
 }
 
